Update index.html 2017-9-15

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="./lx-slider.css">
+	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
 	<div id="wrap" style="margin: 10px auto;width: 800px;">
@@ -35,8 +36,10 @@
 	</div>
 	
 	
-	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	
+	
 	<script type="text/javascript" src="./js/lx-slider.js"></script>
+	<script type="text/javascript" src="./js/client-check.js"></script>
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery-fullPage/2.7.4/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 	
