Update index.html 2017-9-15

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="./lx-slider.css">
+	<link rel="stylesheet" type="text/css" href="./styles/lx-slider.css">
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
@@ -39,7 +39,6 @@
 	
 	
 	<script type="text/javascript" src="./js/lx-slider.js"></script>
-	<script type="text/javascript" src="./js/client-check.js"></script>
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery-fullPage/2.7.4/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 	
